--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,9 +41,9 @@ dependencies:
   firebase_core: 
   firebase_storage: 
   cloud_firestore: 
-  firebase_messaging: 
-  firebase_auth: 
-  google_sign_in: 
+  firebase_messaging: ^10.0.2
+  firebase_auth: ^1.0.1
+  google_sign_in: ^5.2.4
   awesome_dialog: 
   dropdown_search: 
 
